# pangeo-forge-aws-bakery

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  example.env  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
cdk/: app.py  bakery_stack.py
cdk/agent/: Dockerfile
diagrams/: pangeo-forge-aws-bakery.drawio
flow_test/: manual_dask_flow.py  manual_flow.py  oisst_recipe.py  transform_flow.py  utils.py
flow_test/transform_tasks/: http.py  xarray.py  zarr.py
images/agent/: Dockerfile
images/worker/: Dockerfile
test/: manual_dask_flow.py  manual_flow.py
