[tool.poetry]
name = "pangeo-forge-aws-bakery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
"aws-cdk.core" = "^1.109.0"
"aws-cdk.aws-ec2" = "^1.109.0"
"aws-cdk.aws-ecs" = "^1.109.0"
"aws-cdk.aws-iam" = "^1.109.0"
"aws-cdk.aws-ecs-patterns" = "^1.109.0"
"aws-cdk.aws-secretsmanager" = "^1.109.0"
"aws-cdk.aws-s3" = "^1.109.0"
"aws-cdk.aws-ecr" = "^1.109.0"
prefect = "0.14.19"
python-dotenv = "^0.17.1"
zarr = "2.7.0"
pangeo-forge-recipes = "0.3.4"
pandas = "1.2.4"
h5py = "^3.2.1"
h5netcdf = "^0.11.0"
click = "7.1.2"
black = "^21.5b2"
flake8 = "^3.9.2"
isort = "^5.8.0"
pre-commit = "2.10.0"
pre-commit-hooks = "3.4.0"
boto3 = "1.17.49"
s3fs = "^2021.6.0"
dask-cloudprovider = {version = "2021.3.1", extras = ["aws"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
